--- a/data/scenes/worldA/world.css
+++ b/data/scenes/worldA/world.css
@@ -1,32 +1,32 @@
 General{Width:10000;Height:2000;Layers:10;Sprites:79;SpritesFront:0;Polys:16;Baselines:1;Triggers:1;Particles:1;}
 sprite1{x:3185;y:833;scalex:0.87;scaley:0.87;red:239;green:249;image:Hoher Stein.png;}
-sprite2{x:2893;y:1540;rotation:-15.51;image:Steinsammlung.png;}
-sprite3{x:2509;y:1372;scalex:1.57;scaley:1.57;rotation:308.00;image:Steinsammlung.png;}
-sprite4{x:4486;y:1238;scalex:1.13;scaley:1.13;image:Steinsammlung.png;}
-sprite5{x:2291;y:1607;scalex:1.57;scaley:1.57;rotation:13.09;image:Steinsammlung.png;}
-sprite6{x:2744;y:1331;scalex:1.84;scaley:1.84;rotation:68.87;image:Steinsammlung.png;}
-sprite7{x:3046;y:855;scalex:0.75;scaley:0.75;red:245;blue:219;image:Hoher Stein.png;}
-sprite8{x:2629;y:1675;scalex:1.84;scaley:1.84;rotation:68.87;image:Steinsammlung.png;}
-sprite9{x:1731;y:1789;scalex:0.05;scaley:0.05;rotation:13.09;image:Steinsammlung.png;}
-sprite10{x:2183;y:1485;scalex:1.75;scaley:1.75;rotation:-107.04;image:Steinsammlung.png;}
-sprite11{x:1967;y:1802;scalex:1.75;scaley:1.75;rotation:145.63;image:Steinsammlung.png;}
-sprite12{x:6291;y:1914;scalex:2.00;scaley:2.00;rotation:89.00;image:Steinsammlung.png;}
-sprite13{x:1373;y:1883;image:Steinsammlung.png;}
-sprite14{x:3103;y:1104;scalex:0.56;scaley:0.56;name:platform1;image:Plattform.png;}
-sprite15{x:4379;y:1392;image:Steinsammlung.png;}
-sprite16{x:3106;y:1884;rotation:-2.54;image:Steinsammlung.png;}
-sprite17{x:5169;y:1341;scalex:1.13;scaley:1.13;image:Steinsammlung.png;}
-sprite18{x:5062;y:1495;image:Steinsammlung.png;}
-sprite19{x:6722;y:1275;scalex:1.63;scaley:1.63;rotation:57.25;image:Steinsammlung.png;}
-sprite20{x:2837;y:789;scalex:1.38;scaley:1.38;image:Hoher Stein.png;}
-sprite21{x:6444;y:1344;scalex:1.63;scaley:1.63;rotation:60.95;image:Steinsammlung.png;}
-sprite22{x:6692;y:1899;scalex:2.00;scaley:2.00;rotation:89.00;image:Steinsammlung.png;}
-sprite23{x:2906;y:1916;scalex:1.84;scaley:1.84;rotation:17.20;image:Steinsammlung.png;}
-sprite24{x:3216;y:1468;rotation:-100.07;image:Steinsammlung.png;}
-sprite25{x:3209;y:1681;rotation:-2.54;image:Steinsammlung.png;}
-sprite26{x:3233;y:1879;rotation:-2.54;image:Steinsammlung.png;}
-sprite27{x:1323;y:1657;image:Steinsammlung.png;}
-sprite28{x:1543;y:1686;scalex:1.57;scaley:1.57;image:Steinsammlung.png;}
+sprite2{x:2183;y:1485;scalex:1.75;scaley:1.75;rotation:-107.04;image:Steinsammlung.png;}
+sprite3{x:1967;y:1802;scalex:1.75;scaley:1.75;rotation:145.63;image:Steinsammlung.png;}
+sprite4{x:6291;y:1914;scalex:2.00;scaley:2.00;rotation:89.00;image:Steinsammlung.png;}
+sprite5{x:1373;y:1883;image:Steinsammlung.png;}
+sprite6{x:3134;y:1114;scalex:0.56;scaley:0.56;name:platform1;image:Plattform.png;}
+sprite7{x:4379;y:1392;image:Steinsammlung.png;}
+sprite8{x:3106;y:1884;rotation:-2.53;image:Steinsammlung.png;}
+sprite9{x:5169;y:1341;scalex:1.13;scaley:1.13;image:Steinsammlung.png;}
+sprite10{x:5062;y:1495;image:Steinsammlung.png;}
+sprite11{x:6722;y:1275;scalex:1.63;scaley:1.63;rotation:57.25;image:Steinsammlung.png;}
+sprite12{x:2893;y:1540;rotation:-15.51;image:Steinsammlung.png;}
+sprite13{x:2837;y:789;scalex:1.38;scaley:1.38;image:Hoher Stein.png;}
+sprite14{x:6444;y:1344;scalex:1.63;scaley:1.63;rotation:60.95;image:Steinsammlung.png;}
+sprite15{x:6692;y:1899;scalex:2.00;scaley:2.00;rotation:89.00;image:Steinsammlung.png;}
+sprite16{x:2906;y:1916;scalex:1.84;scaley:1.84;rotation:17.20;image:Steinsammlung.png;}
+sprite17{x:3216;y:1468;rotation:-100.07;image:Steinsammlung.png;}
+sprite18{x:3209;y:1681;rotation:-2.53;image:Steinsammlung.png;}
+sprite19{x:3233;y:1879;rotation:-2.53;image:Steinsammlung.png;}
+sprite20{x:1323;y:1657;image:Steinsammlung.png;}
+sprite21{x:1543;y:1686;scalex:1.57;scaley:1.57;image:Steinsammlung.png;}
+sprite22{x:2509;y:1372;scalex:1.57;scaley:1.57;rotation:308.00;image:Steinsammlung.png;}
+sprite23{x:4486;y:1238;scalex:1.13;scaley:1.13;image:Steinsammlung.png;}
+sprite24{x:2291;y:1607;scalex:1.57;scaley:1.57;rotation:13.09;image:Steinsammlung.png;}
+sprite25{x:2744;y:1331;scalex:1.84;scaley:1.84;rotation:68.87;image:Steinsammlung.png;}
+sprite26{x:3046;y:855;scalex:0.75;scaley:0.75;red:245;blue:219;image:Hoher Stein.png;}
+sprite27{x:2629;y:1675;scalex:1.84;scaley:1.84;rotation:68.87;image:Steinsammlung.png;}
+sprite28{x:1731;y:1789;scalex:0.05;scaley:0.05;rotation:13.09;image:Steinsammlung.png;}
 sprite29{x:3290;y:1178;layer:2;image:Steinsammlung.png;}
 sprite30{x:3139;y:1179;layer:2;image:Steinsammlung.png;}
 sprite31{x:3270;y:1332;rotation:72.76;layer:2;image:Steinsammlung.png;}
@@ -78,22 +78,22 @@ sprite76{x:6784;y:1738;scalex:1.38;scaley:1.38;rotation:143.16;layer:5;image:Ste
 sprite77{x:882;y:1590;rotation:-9.97;layer:6;image:Wiesengrund.png;}
 sprite78{x:521;y:1680;rotation:-19.70;layer:7;image:Wiesengrund.png;}
 sprite79{x:185;y:1809;rotation:-24.29;layer:8;image:Wiesengrund.png;}
-poly1{data:397348,-152,397548,-152,397348,761,397548,761;}
-poly2{data:4770,1190,5251,1189,4770,1240,5251,1239;}
-poly3{data:5604,1208,6103,1208,5604,1257,6103,1257;}
-poly4{data:6078,1209,6567,1109,6088,1258,6577,1158;}
-poly5{data:6555,1110,6866,1046,6565,1159,6876,1095;}
-poly6{data:2981,1020,3334,1005,2983,1070,3336,1055;}
-poly7{data:4090,1082,4571,1081,4090,1132,4571,1131;}
-poly8{data:11,1520,12,1854,-31,1520,-30,1854;}
-poly9{data:10854232,920,10854031,920,10854232,-211,10854031,-211;}
-poly10{data:0,1853,424,1665,20,1898,444,1710;}
-poly11{data:418,1667,870,1545,431,1716,883,1594;}
-poly12{data:861,1548,1326,1486,867,1597,1332,1535;}
-poly13{data:1319,1487,1828,1340,1333,1535,1842,1388;}
-poly14{data:1819,1343,2864,1041,1833,1392,2878,1090;}
-poly15{data:2838,1068,3379,1067,2838,1118,3379,1117;}
-poly16{data:2864,1041,2983,1021,2872,1090,2991,1070;}
+poly1{data:397348,-151,397548,-151,397348,761,397548,761;}
+poly2{data:0,1853,424,1665,20,1898,444,1710;}
+poly3{data:418,1667,870,1545,431,1716,883,1594;}
+poly4{data:861,1548,1326,1486,867,1597,1332,1535;}
+poly5{data:1319,1487,1828,1340,1333,1535,1842,1388;}
+poly6{data:1819,1343,2864,1041,1833,1392,2878,1090;}
+poly7{data:2869,1078,3410,1077,2869,1128,3410,1127;id:platform1;}
+poly8{data:2864,1041,2983,1021,2872,1090,2991,1070;}
+poly9{data:4770,1190,5251,1189,4770,1240,5251,1239;}
+poly10{data:5604,1208,6103,1208,5604,1257,6103,1257;}
+poly11{data:6078,1209,6567,1109,6088,1258,6577,1158;}
+poly12{data:6555,1110,6866,1046,6565,1159,6876,1095;}
+poly13{data:2981,1020,3334,1005,2983,1070,3336,1055;}
+poly14{data:4090,1082,4571,1081,4090,1132,4571,1131;}
+poly15{data:11,1520,12,1854,-30,1520,-29,1854;}
+poly16{data:10854232,920,10854031,920,10854232,-210,10854031,-210;}
 baseline1{data:2760,1907,6135,1906,2760,1957,6135,1956;}
 trigger1{id:movePlatform;x:2947;y:1036;radius:275;}
-particle1{effect:wind;x:1482;y:948;}
+particle1{effect:wind.css;x:1482;y:948;}
