Added Toggle Bg Color

--- a/data/scenes/newLv1/world.css
+++ b/data/scenes/newLv1/world.css
@@ -1,29 +1,29 @@
-General{Width:14000;Height:5000;Layers:30;Sprites:333;SpritesFront:0;Polys:0;Baselines:0;Triggers:0;Particles:0;Savepoints:0;}
-sprite1{x:1115;y:2153;scalex:1.75;scaley:1.75;alpha:0.67;parallax:50;layer:2;image:BaumGross2.png;}
-sprite2{x:4788;y:2109;scalex:1.75;scaley:1.75;alpha:0.67;parallax:30;layer:2;image:BaumGross2.png;}
+General{Width:14000;Height:5000;Layers:30;Sprites:343;SpritesFront:0;Polys:0;Baselines:0;Triggers:0;Particles:0;Savepoints:0;}
+sprite1{x:896;y:2174;scalex:3.72;scaley:3.72;alpha:0.46;parallax:65;image:BaumGross.png;}
+sprite2{x:1115;y:2153;scalex:1.75;scaley:1.75;alpha:0.67;parallax:30;layer:2;image:BaumGross2.png;}
 sprite3{x:4342;y:3665;scalex:0.75;scaley:0.75;rotation:-8.27;layer:13;image:Stones1.png;}
 sprite4{x:4636;y:3459;scalex:0.60;scaley:0.60;layer:14;image:Stones1.png;}
 sprite5{x:4675;y:3514;scalex:0.66;scaley:0.66;rotation:-54.86;layer:14;image:Stones1.png;}
-sprite6{x:4559;y:4488;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
-sprite7{x:4412;y:4027;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
-sprite8{x:2401;y:3784;scalex:0.93;scaley:0.93;rotation:4.21;layer:15;image:Stones1.png;}
-sprite9{x:5905;y:4672;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
-sprite10{x:6362;y:4555;scalex:0.99;scaley:0.99;rotation:84.83;layer:15;image:Stones2.png;}
-sprite11{x:3498;y:3725;scalex:0.93;scaley:0.93;rotation:1.34;layer:15;image:Stones1.png;}
-sprite12{x:4540;y:3656;rotation:84.83;layer:15;image:Stones2.png;}
-sprite13{x:4075;y:3659;layer:15;image:Stones2.png;}
-sprite14{x:6189;y:3619;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
-sprite15{x:6490;y:3945;rotation:84.83;layer:15;image:Stones2.png;}
-sprite16{x:6304;y:4088;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
-sprite17{x:6431;y:4751;layer:15;image:Stones2.png;}
-sprite18{x:6337;y:4988;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
-sprite19{x:1100;y:2659;layer:15;image:BaumGross2.png;}
-sprite20{x:2845;y:2661;layer:15;image:BaumGross2.png;}
-sprite21{x:4644;y:2479;layer:15;image:BaumGross2.png;}
-sprite22{x:1984;y:4953;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
-sprite23{x:1959;y:4515;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
-sprite24{x:1812;y:4054;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
-sprite25{x:4584;y:4926;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
+sprite6{x:6189;y:3619;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
+sprite7{x:6490;y:3945;rotation:84.83;layer:15;image:Stones2.png;}
+sprite8{x:6304;y:4088;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
+sprite9{x:6431;y:4751;layer:15;image:Stones2.png;}
+sprite10{x:6337;y:4988;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
+sprite11{x:2845;y:2661;layer:15;image:BaumGross2.png;}
+sprite12{x:4644;y:2479;layer:15;image:BaumGross2.png;}
+sprite13{x:1984;y:4953;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
+sprite14{x:1959;y:4515;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
+sprite15{x:1812;y:4054;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
+sprite16{x:4584;y:4926;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
+sprite17{x:4559;y:4488;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
+sprite18{x:4412;y:4027;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
+sprite19{x:2401;y:3784;scalex:0.93;scaley:0.93;rotation:4.21;layer:15;image:Stones1.png;}
+sprite20{x:5905;y:4672;scalex:0.75;scaley:0.75;rotation:-8.27;layer:15;image:Stones1.png;}
+sprite21{x:3602;y:2963;layer:15;image:baum1.png;}
+sprite22{x:6362;y:4555;scalex:0.99;scaley:0.99;rotation:84.83;layer:15;image:Stones2.png;}
+sprite23{x:3498;y:3725;scalex:0.93;scaley:0.93;rotation:1.34;layer:15;image:Stones1.png;}
+sprite24{x:4540;y:3656;rotation:84.83;layer:15;image:Stones2.png;}
+sprite25{x:4075;y:3659;layer:15;image:Stones2.png;}
 sprite26{x:6223;y:4751;rotation:-60.27;layer:16;image:Stones2.png;}
 sprite27{x:6268;y:4910;scalex:0.60;scaley:0.60;layer:16;image:Stones1.png;}
 sprite28{x:6296;y:4082;scalex:0.66;scaley:0.66;rotation:-54.86;layer:16;image:Stones1.png;}
@@ -89,62 +89,62 @@ sprite87{x:5745;y:4754;scalex:1.08;scaley:1.08;rotation:65.30;layer:16;image:Sto
 sprite88{x:5710;y:4932;scalex:0.66;scaley:0.66;rotation:-54.86;layer:16;image:Stones1.png;}
 sprite89{x:5413;y:4928;layer:16;image:Stones2.png;}
 sprite90{x:5882;y:4874;scalex:0.93;scaley:0.93;rotation:-28.37;layer:16;image:Stones1.png;}
-sprite91{x:1671;y:4318;scalex:0.66;scaley:0.66;rotation:-54.86;layer:17;image:Stones1.png;}
-sprite92{x:1374;y:4314;layer:17;image:Stones2.png;}
-sprite93{x:1543;y:4588;rotation:-60.27;layer:17;image:Stones2.png;}
-sprite94{x:1664;y:4720;scalex:0.60;scaley:0.60;layer:17;image:Stones1.png;}
-sprite95{x:1733;y:4600;scalex:1.08;scaley:1.08;rotation:65.30;layer:17;image:Stones3.png;}
-sprite96{x:1703;y:4775;scalex:0.66;scaley:0.66;rotation:-54.86;layer:17;image:Stones1.png;}
-sprite97{x:1406;y:4771;layer:17;image:Stones2.png;}
-sprite98{x:1944;y:4616;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
-sprite99{x:2205;y:4903;rotation:84.83;layer:17;image:Stones2.png;}
-sprite100{x:2180;y:4465;rotation:84.83;layer:17;image:Stones2.png;}
-sprite101{x:1772;y:3717;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
-sprite102{x:1614;y:3935;layer:17;image:Stones2.png;}
-sprite103{x:2411;y:4894;layer:17;image:Stones2.png;}
-sprite104{x:4200;y:3819;scalex:0.60;scaley:0.60;layer:17;image:Stones1.png;}
-sprite105{x:4279;y:3900;scalex:0.66;scaley:0.66;rotation:-54.86;layer:17;image:Stones1.png;}
-sprite106{x:3931;y:3886;layer:17;image:Stones2.png;}
-sprite107{x:4111;y:4104;rotation:-60.27;layer:17;image:Stones2.png;}
-sprite108{x:4232;y:4236;scalex:0.60;scaley:0.60;layer:17;image:Stones1.png;}
-sprite109{x:4092;y:4393;rotation:84.83;layer:17;image:Stones2.png;}
-sprite110{x:4301;y:4116;scalex:1.08;scaley:1.08;rotation:65.30;layer:17;image:Stones3.png;}
-sprite111{x:4271;y:4291;scalex:0.66;scaley:0.66;rotation:-54.86;layer:17;image:Stones1.png;}
-sprite112{x:3949;y:4300;layer:17;image:Stones2.png;}
-sprite113{x:4143;y:4561;rotation:-60.27;layer:17;image:Stones2.png;}
-sprite114{x:4245;y:4713;scalex:0.60;scaley:0.60;layer:17;image:Stones1.png;}
-sprite115{x:4333;y:4573;scalex:1.08;scaley:1.08;rotation:65.30;layer:17;image:Stones3.png;}
-sprite116{x:4303;y:4748;scalex:0.66;scaley:0.66;rotation:-54.86;layer:17;image:Stones1.png;}
-sprite117{x:3984;y:4757;layer:17;image:Stones2.png;}
-sprite118{x:4544;y:4589;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
-sprite119{x:4763;y:4851;rotation:84.83;layer:17;image:Stones2.png;}
-sprite120{x:4780;y:4438;rotation:84.83;layer:17;image:Stones2.png;}
-sprite121{x:4133;y:3948;layer:17;image:Stones2.png;}
-sprite122{x:5025;y:4867;layer:17;image:Stones2.png;}
-sprite123{x:2611;y:4372;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
-sprite124{x:5257;y:4230;scalex:0.75;scaley:0.75;rotation:-8.27;layer:17;image:Stones1.png;}
-sprite125{x:5283;y:4690;scalex:0.75;scaley:0.75;rotation:-8.27;layer:17;image:Stones1.png;}
-sprite126{x:5873;y:4323;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
-sprite127{x:6134;y:4610;rotation:84.83;layer:17;image:Stones2.png;}
-sprite128{x:5712;y:4541;layer:17;image:Stones2.png;}
-sprite129{x:5314;y:4787;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
-sprite130{x:5543;y:5032;rotation:84.83;layer:17;image:Stones2.png;}
-sprite131{x:5173;y:4973;layer:17;image:Stones2.png;}
-sprite132{x:6149;y:3282;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
-sprite133{x:5988;y:3500;layer:17;image:Stones2.png;}
-sprite134{x:6264;y:3751;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
-sprite135{x:6010;y:4070;layer:17;image:Stones2.png;}
-sprite136{x:6304;y:4178;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
-sprite137{x:6143;y:4396;layer:17;image:Stones2.png;}
-sprite138{x:1479;y:3714;rotation:-60.27;layer:17;image:Stones2.png;}
-sprite139{x:1600;y:3846;scalex:0.60;scaley:0.60;layer:17;image:Stones1.png;}
-sprite140{x:1669;y:3726;scalex:1.08;scaley:1.08;rotation:65.30;layer:17;image:Stones3.png;}
-sprite141{x:1639;y:3901;scalex:0.66;scaley:0.66;rotation:-54.86;layer:17;image:Stones1.png;}
-sprite142{x:1342;y:3897;layer:17;image:Stones2.png;}
-sprite143{x:1511;y:4131;rotation:-60.27;layer:17;image:Stones2.png;}
-sprite144{x:1632;y:4263;scalex:0.60;scaley:0.60;layer:17;image:Stones1.png;}
-sprite145{x:1492;y:4420;rotation:84.83;layer:17;image:Stones2.png;}
-sprite146{x:1701;y:4143;scalex:1.08;scaley:1.08;rotation:65.30;layer:17;image:Stones3.png;}
+sprite91{x:4232;y:4236;scalex:0.60;scaley:0.60;layer:17;image:Stones1.png;}
+sprite92{x:4092;y:4393;rotation:84.83;layer:17;image:Stones2.png;}
+sprite93{x:4301;y:4116;scalex:1.08;scaley:1.08;rotation:65.30;layer:17;image:Stones3.png;}
+sprite94{x:4271;y:4291;scalex:0.66;scaley:0.66;rotation:-54.86;layer:17;image:Stones1.png;}
+sprite95{x:3949;y:4300;layer:17;image:Stones2.png;}
+sprite96{x:4143;y:4561;rotation:-60.27;layer:17;image:Stones2.png;}
+sprite97{x:4245;y:4713;scalex:0.60;scaley:0.60;layer:17;image:Stones1.png;}
+sprite98{x:4333;y:4573;scalex:1.08;scaley:1.08;rotation:65.30;layer:17;image:Stones3.png;}
+sprite99{x:4303;y:4748;scalex:0.66;scaley:0.66;rotation:-54.86;layer:17;image:Stones1.png;}
+sprite100{x:3984;y:4757;layer:17;image:Stones2.png;}
+sprite101{x:4544;y:4589;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
+sprite102{x:4763;y:4851;rotation:84.83;layer:17;image:Stones2.png;}
+sprite103{x:4780;y:4438;rotation:84.83;layer:17;image:Stones2.png;}
+sprite104{x:4133;y:3948;layer:17;image:Stones2.png;}
+sprite105{x:5025;y:4867;layer:17;image:Stones2.png;}
+sprite106{x:2611;y:4372;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
+sprite107{x:5257;y:4230;scalex:0.75;scaley:0.75;rotation:-8.27;layer:17;image:Stones1.png;}
+sprite108{x:5283;y:4690;scalex:0.75;scaley:0.75;rotation:-8.27;layer:17;image:Stones1.png;}
+sprite109{x:5873;y:4323;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
+sprite110{x:6134;y:4610;rotation:84.83;layer:17;image:Stones2.png;}
+sprite111{x:5712;y:4541;layer:17;image:Stones2.png;}
+sprite112{x:5314;y:4787;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
+sprite113{x:5543;y:5032;rotation:84.83;layer:17;image:Stones2.png;}
+sprite114{x:5173;y:4973;layer:17;image:Stones2.png;}
+sprite115{x:6149;y:3282;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
+sprite116{x:5988;y:3500;layer:17;image:Stones2.png;}
+sprite117{x:6264;y:3751;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
+sprite118{x:6010;y:4070;layer:17;image:Stones2.png;}
+sprite119{x:6304;y:4178;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
+sprite120{x:6143;y:4396;layer:17;image:Stones2.png;}
+sprite121{x:1479;y:3714;rotation:-60.27;layer:17;image:Stones2.png;}
+sprite122{x:1600;y:3846;scalex:0.60;scaley:0.60;layer:17;image:Stones1.png;}
+sprite123{x:1669;y:3726;scalex:1.08;scaley:1.08;rotation:65.30;layer:17;image:Stones3.png;}
+sprite124{x:1639;y:3901;scalex:0.66;scaley:0.66;rotation:-54.86;layer:17;image:Stones1.png;}
+sprite125{x:1342;y:3897;layer:17;image:Stones2.png;}
+sprite126{x:1511;y:4131;rotation:-60.27;layer:17;image:Stones2.png;}
+sprite127{x:1632;y:4263;scalex:0.60;scaley:0.60;layer:17;image:Stones1.png;}
+sprite128{x:1492;y:4420;rotation:84.83;layer:17;image:Stones2.png;}
+sprite129{x:1701;y:4143;scalex:1.08;scaley:1.08;rotation:65.30;layer:17;image:Stones3.png;}
+sprite130{x:1671;y:4318;scalex:0.66;scaley:0.66;rotation:-54.86;layer:17;image:Stones1.png;}
+sprite131{x:1374;y:4314;layer:17;image:Stones2.png;}
+sprite132{x:1543;y:4588;rotation:-60.27;layer:17;image:Stones2.png;}
+sprite133{x:1664;y:4720;scalex:0.60;scaley:0.60;layer:17;image:Stones1.png;}
+sprite134{x:1733;y:4600;scalex:1.08;scaley:1.08;rotation:65.30;layer:17;image:Stones3.png;}
+sprite135{x:1703;y:4775;scalex:0.66;scaley:0.66;rotation:-54.86;layer:17;image:Stones1.png;}
+sprite136{x:1406;y:4771;layer:17;image:Stones2.png;}
+sprite137{x:1944;y:4616;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
+sprite138{x:2205;y:4903;rotation:84.83;layer:17;image:Stones2.png;}
+sprite139{x:2180;y:4465;rotation:84.83;layer:17;image:Stones2.png;}
+sprite140{x:1772;y:3717;scalex:0.93;scaley:0.93;rotation:-28.37;layer:17;image:Stones1.png;}
+sprite141{x:1614;y:3935;layer:17;image:Stones2.png;}
+sprite142{x:2411;y:4894;layer:17;image:Stones2.png;}
+sprite143{x:4200;y:3819;scalex:0.60;scaley:0.60;layer:17;image:Stones1.png;}
+sprite144{x:4279;y:3900;scalex:0.66;scaley:0.66;rotation:-54.86;layer:17;image:Stones1.png;}
+sprite145{x:3931;y:3886;layer:17;image:Stones2.png;}
+sprite146{x:4111;y:4104;rotation:-60.27;layer:17;image:Stones2.png;}
 sprite147{x:799;y:5016;scalex:0.75;scaley:0.75;rotation:-8.27;layer:18;image:Stones1.png;}
 sprite148{x:1050;y:4586;scalex:0.66;scaley:0.66;rotation:-54.86;layer:18;image:Stones1.png;}
 sprite149{x:774;y:4578;scalex:0.75;scaley:0.75;rotation:-8.27;layer:18;image:Stones1.png;}
@@ -315,20 +315,30 @@ sprite313{x:2722;y:4666;scalex:0.93;scaley:0.93;rotation:-28.37;layer:21;image:S
 sprite314{x:2983;y:4953;rotation:84.83;layer:21;image:Stones2.png;}
 sprite315{x:5692;y:3420;scalex:0.93;scaley:0.93;rotation:-28.37;layer:21;image:Stones1.png;}
 sprite316{x:5531;y:3638;layer:21;image:Stones2.png;}
-sprite317{x:5045;y:3455;scalex:0.93;scaley:0.93;rotation:-17.64;layer:21;image:Stones1.png;}
+sprite317{x:5045;y:3455;scalex:0.93;scaley:0.93;rotation:-17.62;layer:21;image:Stones1.png;}
 sprite318{x:5269;y:3708;rotation:84.83;layer:21;image:Stones2.png;}
 sprite319{x:4847;y:3639;layer:21;image:Stones2.png;}
 sprite320{x:5399;y:3344;rotation:-9.63;flipX:1;layer:23;image:Wiesengrund.png;}
 sprite321{x:3860;y:3593;rotation:-6.03;layer:24;image:Wiesengrund.png;}
 sprite322{x:4382;y:3521;rotation:-9.63;flipX:1;layer:24;image:Wiesengrund.png;}
 sprite323{x:4887;y:3432;rotation:-9.63;layer:24;image:Wiesengrund.png;}
-sprite324{x:2817;y:3665;rotation:-3.52;layer:25;image:Wiesengrund.png;}
-sprite325{x:3338;y:3637;rotation:-3.52;layer:25;image:Wiesengrund.png;}
+sprite324{x:2817;y:3665;rotation:-3.50;layer:25;image:Wiesengrund.png;}
+sprite325{x:3338;y:3637;rotation:-3.50;layer:25;image:Wiesengrund.png;}
 sprite326{x:2299;y:3679;layer:26;image:Wiesengrund.png;}
 sprite327{x:743;y:3673;layer:27;image:Wiesengrund.png;}
 sprite328{x:1264;y:3675;layer:27;image:Wiesengrund.png;}
 sprite329{x:1783;y:3680;layer:27;image:Wiesengrund.png;}
-sprite330{x:224;y:3672;layer:28;image:Wiesengrund.png;}
-sprite331{x:5913;y:3255;rotation:-9.63;flipX:1;layer:28;image:Wiesengrund.png;}
-sprite332{x:6404;y:3264;flipX:1;layer:29;image:Wieseabgerundet.png;}
-sprite333{x:1744;y:3375;layer:30;image:Robot11.png;}
+sprite330{x:1112;y:2658;layer:28;image:BaumGross2.png;}
+sprite331{x:224;y:3672;layer:28;image:Wiesengrund.png;}
+sprite332{x:5913;y:3255;rotation:-9.63;flipX:1;layer:28;image:Wiesengrund.png;}
+sprite333{x:6404;y:3264;flipX:1;layer:29;image:Wieseabgerundet.png;}
+sprite334{x:4432;y:5093;scalex:9.34;scaley:9.34;rotation:27.36;red:241;parallax:-55;layer:29;image:clouds2.png;}
+sprite335{x:1727;y:3498;scalex:0.49;scaley:0.49;layer:30;image:Robot11.png;}
+sprite336{x:212;y:5163;scalex:9.34;scaley:9.34;parallax:-40;layer:30;image:clouds2.png;}
+sprite337{x:2370;y:4995;scalex:9.34;scaley:9.34;parallax:-35;layer:30;image:clouds2.png;}
+sprite338{x:5405;y:5025;scalex:9.34;scaley:9.34;parallax:-40;layer:30;image:clouds2.png;}
+sprite339{x:7563;y:4857;scalex:9.34;scaley:9.34;parallax:-35;layer:30;image:clouds2.png;}
+sprite340{x:1;y:5897;scalex:9.34;scaley:9.34;parallax:-40;layer:30;image:clouds2.png;}
+sprite341{x:2159;y:5729;scalex:9.34;scaley:9.34;blue:223;parallax:-35;layer:30;image:clouds2.png;}
+sprite342{x:5194;y:5759;scalex:9.34;scaley:9.34;red:250;green:239;parallax:-40;layer:30;image:clouds2.png;}
+sprite343{x:7352;y:5591;scalex:9.34;scaley:9.34;parallax:-35;layer:30;image:clouds2.png;}
